<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/opportunities"
            android:icon="@drawable/search_icon"
            android:title="@string/label_oportunidade" />

        <item
            android:id="@+id/myprofile"
            android:icon="@drawable/profile_icon"
            android:title="@string/label_meuCurriculo" />
        <item
            android:id="@+id/my_opportunities"
            android:icon="@drawable/miportunities_icon"
            android:title="@string/label_minhasOportunidades" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/label_configuracoes" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/label_sair"
                />
        </menu>
    </item>

</menu>
