<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.equipealpha.univagas.LoginActivity"
    android:orientation="vertical"

    android:background="@color/page_background"

    android:weightSum="1">

    <ImageView
        android:id="@+id/image"
        android:layout_width="377dp"
        android:layout_height="78dp"
        android:src="@drawable/login_icon"
        android:layout_gravity="center"
        android:layout_weight="0.71" />

    <TextView
        android:id="@+id/labelProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/projectName"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/areaProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/areaName"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/labelNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userName"
        android:layout_marginTop="36dp"
        />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/userNameHint"
        android:textColorLink="@color/line_background"
        android:layout_marginTop="19dp"
        />

    <TextView
        android:id="@+id/labelSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userPassword"
        android:layout_marginTop="36dp"
        />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userPasswordHint"
        android:layout_weight="0"
        android:textColorLink="@color/line_background"
        tools:password="false"
        android:inputType="textPassword"
        tools:fontFamily="sans-serif"
        />

    <Button
        android:id="@+id/btnLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:layout_weight="0.00"
        android:background="@color/button_background"
        android:textColorLink="@color/line_background"
        android:onClick="startMainActivity"
        />

    <TextView
        android:id="@+id/labelInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelInfo"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/labelRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelRegistrar"
        android:textSize="18dp"
        android:onClick="startCriarContaActivity"
        />

</LinearLayout>
